--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^13.2.1",
     "@types/jest": "^27.0.1",
     "@types/node": "^16.7.13",
+    "@types/styled-components": "^5.1.26",
     "heroku": "^7.63.4",
     "react": "^18.2.0",
     "react-awesome-slider": "^4.1.0",
@@ -47,7 +48,6 @@
   },
   "devDependencies": {
     "@types/react": "^18.0.18",
-    "@types/react-dom": "^18.0.6",
-    "@types/styled-components": "^5.1.26"
+    "@types/react-dom": "^18.0.6"
   }
 }
