--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "online-menu",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "yarn": "1.x"
+  },
   "dependencies": {
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
